--- a/log.html
+++ b/log.html
@@ -1,1 +1,1 @@
-<div class='msgln'><b>daw</b> [2024-07-25 08:51:07]: daw<br></div><div class='msgln'><b>awdwda</b> [2024-07-25 09:24:09]: wada<br></div><div class='msgln'><b>Faiz</b> [2024-07-25 09:26:25]: Selamat Semoga Selalau Bersama..<br></div><div class='msgln'><b>Andi Akbar Arif</b> [2024-07-25 09:27:57]: Alamdulillah Semoga Mawaddah Warohma dan bahagia selamanya..<br></div>
+<div class='msgln'><b>FERY FADUL RAHMAN</b> [2024-07-25 14:02:43]: Terimakasih Atas Undangannya <br></div>
